// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableBodyRow/> should call onClick when clicked 1`] = `
<tr
  class="row isClickable"
>
  Foo
</tr>
`;

exports[`<TableBodyRow/> should render 1`] = `
<tr
  class="row foo"
>
  Foo
</tr>
`;
